Use Arrays.asList for Sheets rows